--- a/results/bugDetails/QT11.md
+++ b/results/bugDetails/QT11.md
@@ -6,5 +6,13 @@ During our code analysis of Quiche, we discovered the developers had set the inc
 ## Impacted Servers & Versions
 Quiche (Tested on commit 24a959ab)
 
+## Fixed Version
+This bug has been fixed with another Cloudflare API without any modification in Quiche's source code. The developers have clarify the usage of client authentication in the documentation.
+
 ## Input Sequence
 [Input.INITIAL_CLIENT_HELLO_VALID_ACK, Input.HANDSHAKE_EMPTY_CERTIFICATE, Input.HANDSHAKE_FINISHED]
+
+## Learned Model
+The learned model below illustrates the flow of this bug (highlighted in red colour).
+
+![Learned Model](resources/quicheBWCA.pdf)
