--- a/results/bugDetails/QT19.md
+++ b/results/bugDetails/QT19.md
@@ -6,5 +6,8 @@ The server accepts and processes packets that do not have the required amount of
 ## Impacted Servers & Versions
 Quant (Tested on commit 511d91c3)
 
+# Fixed Version
+Developers acknowledge findings. Not fixed because the [GitHub Repository](https://github.com/NTAP/quant/issues/83) is no longer under active maintenance.
+
 ## Input Sequence
 [Input.REMOVE_PADDING_FROM_INITIAL_PACKETS, Input.INITIAL_CLIENT_HELLO_VALID_ACK]
