--- a/results/bugDetails/QT31-38.md
+++ b/results/bugDetails/QT31-38.md
@@ -4,14 +4,18 @@
 Accepts Handshake packets from an unmatched Destination Connection ID until the handshake is complete.
 
 ## Impacted Servers & Versions
-Kwik (Tested on commit 745fd4e2)
-MsQuic (Tested on commit 5c070cdc)
-Quant (Tested on commit 511d91c3)
-Quiche (Tested on commit 24a959ab)
-Quic-go (Tested on commit f78683ab)
-Quiche4j (Tested on commit ea5effce)
-Quiwi (Tested on commit b7b5dadb)
-S2n-quic (Tested on commit ec651875)
+Kwik (Tested on commit 745fd4e2)<br/>
+MsQuic (Tested on commit 5c070cdc)<br/>
+Quant (Tested on commit 511d91c3)<br/>
+Quiche (Tested on commit 24a959ab)<br/>
+Quic-go (Tested on commit f78683ab)<br/>
+Quiche4j (Tested on commit ea5effce)<br/>
+Quiwi (Tested on commit b7b5dadb)<br/>
+S2n-quic (Tested on commit ec651875)<br/>
+
+## Fixed Version
+Kwik (commit [a4ae63c](https://github.com/ptrd/kwik/commit/a4ae63cb4e9fabaa482c320fcf7b19d3ed5a578c))<br/>
+S2n-quic ([v1.29.0](https://github.com/aws/s2n-quic/commit/ea3e878ec70439dea87588e31b5139a574b593ab))
 
 ## Input Sequence
 [Input.INITIAL_CLIENT_HELLO_VALID_ACK, Input.CHANGE_DESTINATION_CONNECTION_ID_ORIGINAL , Input.HANDSHAKE_FINISHED]
