--- a/results/bugDetails/QT39.md
+++ b/results/bugDetails/QT39.md
@@ -1,10 +1,13 @@
-# QT39
+# QT39 ([CVE-2023-42805](https://nvd.nist.gov/vuln/detail/CVE-2023-42805))
 
 ## Bug Description
-Unexpected frame types were not always handled correctly. Use of the Unwrap() function on a None value could occur when processing an unexpected frame.
+Unexpected frame types were not always handled correctly. Use of the Unwrap() function on a None value could occur when processing an unexpected frame. This allows an attacker to perform a DoS attack on the server.
 
 ## Impacted Servers & Versions
 Quinn (Tested on commit 4395b969 & 0af891e0)
+
+## Fixed Version
+This bug was fixed in version [0.9.5](https://github.com/quinn-rs/quinn/security/advisories/GHSA-q8wc-j5m9-27w3).
 
 ## Input Sequence
 [Input.INITIAL_PING, Input.INITIAL_UNEXPECTED_FRAME_TYPE]
