--- a/results/bugDetails/QT42.md
+++ b/results/bugDetails/QT42.md
@@ -6,5 +6,8 @@ The server accepts a Handshake packet from an unmatched Destination Connection I
 ## Impacted Servers & Versions
 Aioquic (Tested on commit 239f99b8)
 
+## Fixed Version
+This bug was fixed in commit [c7473f6](https://github.com/aiortc/aioquic/commit/c7473f66f455311e477f0e103b22c6ad1b9dad13).
+
 ## Input Sequence
 [Input.INITIAL_CLIENT_HELLO_VALID_ACK, Input.CHANGE_DESTINATION_CONNECTION_ID_ORIGINAL , Input.HANDSHAKE_FINISHED]
