--- a/results/bugDetails/QT43.md
+++ b/results/bugDetails/QT43.md
@@ -6,5 +6,8 @@ The server does not close the connection when it receives an unexpected or inval
 ## Impacted Servers & Versions
 Aioquic (Tested on commit 239f99b8)
 
+## Fixed Version
+This bug was fixed in commit [e9b2579](https://github.com/aiortc/aioquic/pull/417).
+
 ## Input Sequence
 [Input.INITIAL_CLIENT_HELLO_VALID_ACK, Input.HANDSHAKE_UNEXPECTED_FRAME_TYPE]
