--- a/results/bugDetails/QT53.md
+++ b/results/bugDetails/QT53.md
@@ -6,5 +6,8 @@ The server process a CRYPTO(Finished) message carried in a 0-RTT packet and comp
 ## Impacted Servers & Versions
 Quinn (Tested on commmit 4395b969 and 0af891e0 with PSK configuration)
 
+## Fixed Version
+This bug was fixed in commit [470b213](https://github.com/quinn-rs/quinn/pull/1721).
+
 ## Input Sequence
  ['initCltHello-invldACK_short', '0rttFin_short']
