--- a/results/bugDetails/QT14.md
+++ b/results/bugDetails/QT14.md
@@ -6,5 +6,8 @@ When sending an INITIAL_PING as the first message of the connection to the serve
 ## Impacted Servers & Versions
 Quant (Tested on commit 511d91c3)
 
+# Fixed Version
+Developers acknowledge findings. Not fixed because the [GitHub Repository](https://github.com/NTAP/quant/issues/83) is no longer under active maintenance.
+
 ## Input Sequence
 [Input.INITIAL_PING]
