--- a/results/bugDetails/QT30.md
+++ b/results/bugDetails/QT30.md
@@ -6,5 +6,8 @@ The server accepts a Handshake packet from an unmatched Destination Connection I
 ## Impacted Servers & Versions
 LSQuic (Tested on commit 1b113d19)
 
+## Fixed Version
+This bug was fixed in [v4.0.2](https://github.com/litespeedtech/lsquic/releases/tag/v4.0.2).
+
 ## Input Sequence
 [Input.INITIAL_CLIENT_HELLO_VALID_ACK, Input.CHANGE_DESTINATION_CONNECTION_ID_ORIGINAL , Input.HANDSHAKE_FINISHED, Input.VALID_NEW_CONNECTION_ID]
