--- a/results/bugDetails/QT44.md
+++ b/results/bugDetails/QT44.md
@@ -6,5 +6,8 @@ The server does not close the connection when it receives a packet containing no
 ## Impacted Servers & Versions
 Lsquic (Tested on commit 1b113d19)
 
+## Fixed Version
+This bug was fixed in [v4.0.2](https://github.com/litespeedtech/lsquic/releases/tag/v4.0.2).
+
 ## Input Sequence
 [Input.INITIAL_CLIENT_HELLO_VALID_ACK, Input.HANDSHAKE_EMPTY_PAYLOAD]
