--- a/results/bugDetails/QT47.md
+++ b/results/bugDetails/QT47.md
@@ -6,5 +6,8 @@ The server does not close the connection when it receives a packet containing no
 ## Impacted Servers & Versions
 XQUIC (Tested on commit 00f62288)
 
+## Fixed Version
+This bug was fixed in [02c81a8](https://github.com/alibaba/xquic/pull/384#event-11230715692).
+
 ## Input Sequence
  [Input.INITIAL_CLIENT_HELLO_VALID_ACK, Input.HANDSHAKE_UNEXPECTED_FRAME_TYPE]
