--- a/results/bugDetails/QT51.md
+++ b/results/bugDetails/QT51.md
@@ -6,5 +6,8 @@ The Lsquic server does not handle the re-transmission correctly, causing the ser
 ## Impacted Servers & Versions
 Lsquic (Tested on v4.0.2 with PSK configuration)
 
+## Fixed Version
+This bug was fixed in [v4.0.4](https://github.com/litespeedtech/lsquic/releases/tag/v4.0.4).
+
 ## Input Sequence
  [Input.INITIAL_CLIENT_HELLO_VALID_ACK, Input.INITIAL_PING, Input.HANDSHAKE_FINISHED]
