--- a/results/bugDetails/QT54.md
+++ b/results/bugDetails/QT54.md
@@ -6,5 +6,8 @@ The server does not close the connection when it receives a packet containing no
 ## Impacted Servers & Versions
 Quinn (Tested on commmit 4395b969 and 0af891e0)
 
+## Fixed Version
+This bug was fixed in [7bd92f6](https://github.com/quinn-rs/quinn/pull/1693).
+
 ## Input Sequence
  [Input.INITIAL_CLIENT_HELLO_VALID_ACK, Input.HANDSHAKE_UNEXPECTED_FRAME_TYPE]
