--- a/results/bugDetails/QT11.md
+++ b/results/bugDetails/QT11.md
@@ -15,4 +15,4 @@ This bug has been fixed with another Cloudflare API without any modification in 
 ## Learned Model
 The learned model below illustrates the flow of this bug (highlighted in red colour).
 
-![Learned Model](resources/quicheBWCA.pdf)
+![Learned Model](resources/quicheBWCA.png)
