move from paper

--- a/results/bugDetails/L-2.md
+++ b/results/bugDetails/L-2.md
@@ -8,3 +8,8 @@ PQUIC (Tested on commit 841c8228)
 
 ## Input Sequence
 [Input.INITIAL_CLIENT_HELLO_VALID_ACK, Input.HANDSHAKE_FINISHED, Input.INVALID_NEW_CONNECTION_ID]
+
+## Detailed Case Study (Moved from paper)
+**Incorrect method of emptying the re-transmission queue.** Because Pquic is built on top of the older Picoquic library, it shared the issue **M-4** discussed in Section 5.2 with Picoquic. However, unlike Picoquic, which attempts to access a ```NULL``` pointer to obtain the encryption key for re-transmission, Pquic will always have access to the encryption keys because it never discards them---see **S-10**.
+
+**Impact.** This behaviour causes the server to re-transmit acknowledged messages to the peer, unnecessarily increasing network traffic and reducing the utility of network bandwidth.
