--- a/results/bugDetails/L-3.md
+++ b/results/bugDetails/L-3.md
@@ -8,3 +8,8 @@ PQUIC (Tested on commit 841c8228)
 
 ## Input Sequence
 [Input.INITIAL_PING, Input.INITIAL_UNEXPECTED_FRAME_TYPE]
+
+## Detailed case study (Moved from paper)
+**Infinite loop when processing frame type ```0xFF```.** When the PQUIC server processes a packet carrying a ```0xFF``` frame type, the server always gets stuck in a loop that attempts to match ```0xFF```, an invalid frame type, with the expected frame type. This issue is specific to the ```0xFF``` frame type and does not happen with other invalid frame types.
+
+**Impact.** Because PQUIC is running on a single thread, getting stuck in an infinite loop causes the PQUIC server to become unavailable to serve any client until the server administrator manually restarts it. This allows an attacker to perform a DoS attack on the server using the message described above.
