--- a/results/bugDetails/M-2.md
+++ b/results/bugDetails/M-2.md
@@ -11,3 +11,8 @@ This bug has been fixed in commit [ac51239](https://github.com/mozilla/neqo/pull
 
 ## Input Sequence
 [Input.INITIAL_CONNECTION_CLOSE]
+
+## Detailed Case Study (Moved from paper)
+**Null Pointer Dereference in Neqo.** Upon looking at the Learner logs, it was found that the Neqo server crashed with an assertion error in cases where the selected input sequence contains an ```initialConnectionClose``` message that precedes an ```initialClientHello``` message. This assertion is also guaranteed to occur when the input sequence includes the ```initialConnectionClose``` message but lacks the ```initialClientHello``` message. Based on our findings, it appears that the server attempts to respond with a ```ConnectionClose``` message. However, it cannot obtain the connection's primary path when creating the message. This happens because the server will only set a primary path for that connection when it receives and processes an ```initialClientHello``` message. This finding demonstrated that the Learner logs are helpful in detecting memory-corruption bugs that are not directly shown in the learned models. 
+
+**Impact.** This vulnerability allows an attacker to launch a denial of service (DoS) attack on Neqo servers by sending a single ```initialConnectionClose``` input at the start of a connection establishment. This was fixed by Neqo developers. Notably, the developers stated this vulnerabilities only affect the server-side implementation as they currently focus on client implementation.
