--- a/results/bugDetails/M-4.md
+++ b/results/bugDetails/M-4.md
@@ -12,7 +12,10 @@ This bug was fixed in commit 4f695ac.
 ## Input Sequence
 [Input.INITIAL_PING, Input.INITIAL_CLIENT_HELLO_INVALID_ACK]
 
-## Learned Model
-The learned model below illustrates the flow of this bug (highlighted in red colour).
+## Complete Model of Figure 6 (Moved from paper)
+![Learned Model](resources/picoquicBWCA_short.png)
+Figure 1: An optimized model from Picoquic with **ClientAuth** configuration learned with ```t=short``` parameter setting for inputs. Differental analysis with Figure 2 below using ```t=long``` reveals a software bug exploit.
 
-![Learned Model](resources/picoquicBWCA.png)
+![Learned Model](resources/picoquicBWCA_long.png)
+Figure 2: An optimized model from Picoquic with **ClientAuth** configuration learned with ```t=long``` parameter setting for inputs.
+
