--- a/results/bugDetails/M-8.md
+++ b/results/bugDetails/M-8.md
@@ -11,3 +11,8 @@ This bug was fixed in version [0.9.5](https://github.com/quinn-rs/quinn/security
 
 ## Input Sequence
 [Input.INITIAL_PING, Input.INITIAL_UNEXPECTED_FRAME_TYPE]
+
+## Detailed Case Study (Moved from paper)
+**Null Pointer Dereference in Quinn.** When testing Quinn, our crash logger detected crashes when handling ```hndUnxpFrType```. These crashes arise from Quinn *panicking* when it attempts to unwrap a  ```None``` value after matching an unexpected frame to the ```Type``` enum. 
+
+**Impact** This allows an attacker to perform a DoS attack using a malformed packet (```hndUnxpFrType```). Notably, the bug exists in both the server and client implementations since they share the same library. We responsibly reported this vulnerability to the Quinn developers. This vulnerability was assigned *CVE-2023-42805* with high severity and patched.
