--- a/results/bugDetails/S-12.md
+++ b/results/bugDetails/S-12.md
@@ -12,7 +12,11 @@ This bug has been fixed with another Cloudflare API without any modification in 
 ## Input Sequence
 [Input.INITIAL_CLIENT_HELLO_VALID_ACK, Input.HANDSHAKE_EMPTY_CERTIFICATE, Input.HANDSHAKE_FINISHED]
 
-## Learned Model
-The learned model below illustrates the flow of this bug (highlighted in red colour).
-
+## Complete Model of Figure 5 (Moved from paper)
 ![Learned Model](resources/quicheBWCA.png)
+Figure 1: Optimized learned model of a Quiche server with the **ClientAuth** configuration. Blue edges show a valid path to complete a QUIC handshake. Red edges demonstrate an invalid path that bypasses the client authentication, but still completes the handshake without errors.
+
+## Summarised Flow (Moved from paper)
+<img src="resources/quicheClientAuthBypass.png" alt="Alt text" width="500"/>
+
+Figure 2: Client authentication bypass in Quiche. The invalid (EmptyCertificate) message is shown in *red text*.
