--- a/results/bugDetails/M-3.md
+++ b/results/bugDetails/M-3.md
@@ -11,3 +11,8 @@ This bug has been fixed in [NSPR](https://bugzilla.mozilla.org/show_bug.cgi?id=1
 
 ## Input Sequence
 [Input.INITIAL_CLIENT_HELLO_VALID_ACK] x 32768
+
+## Detailed Case Study (Moved from paper)
+**Limited connections due to a hardcoded value.** The Neqo server in all configurations can only accept at most 32,767 connections, including closed connections. After the 32,767th connection, the server crashes with an assertion error when the variable of ```PRDescIdentity``` data type is storing a value that is equal to ```int_16_max()``` at the beginning of the ```PD_GetUniqueIdentity()``` function. This function creates a unique identity for each connection, and each identity is assigned a unique identity number. The unique identity number starts from 0 and then increases by 1 for every new unique identity created. To ensure the identity is unique, the server uses a variable to track the most recent unique identity number. In the ```PD_GetUniqueIdentity()``` function, if the current unique identity number is equal to ```int_16_max()```, it will stop the unique identity creation and raise an assertion error. As described in Mozilla's documentation, the data type, ```PRIntn```/```PRDescIdentity```, that is used to store the unique identity number is guaranteed to be at least 16 bits, but the architecture that runs the server can define it to be wider, such as 32 bits or 64 bits. However, due to the hard-coded comparison value, ```int_16_max()``` in the assertion statement, our architecture that defined ```PRDescIdentity``` to 32 bits which can actually create up to 2,147,483,647 unique identities, will still crash after the 32767th connection. This may affect the performance of the Neqo server because, with the hard-coded value in the assertion, it is guaranteed to crash on the 32,768th connection, no matter the data type used by the architecture. 
+
+**Impact.** This allows an attacker to perform a DoS attack by establishing more than 32,767 QUIC connections with the server. This was fixed by Neqo developers. Notably, the developers stated this vulnerabilities only affect the server-side implementation as they currently focus on client implementation.
